k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rizer001-site
  labels:
    app: rizer001-site
