k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rizer001-svc
  namespace: rizer001-site
  labels:
    app: rizer001-site
spec:
  type: ClusterIP
  selector:
    app: rizer001-site
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
