k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rizer001-site
  namespace: rizer001-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - rizer001.opik.net
      secretName: rizer001-tls
  rules:
    - host: rizer001.opik.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rizer001-svc
                port:
                  number: 80
